# chip8-emulator

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  webpack.config.js
.github/workflows/: rust.yml
js/: app.js
sass/: style.sass
src/: graphics.rs  lib.rs  timer.rs
src/chip8emulator/: chip8timer.rs  graphics.rs  keypad.rs  mod.rs  opcode.rs  timer.rs
static/: index.html
tests/: app.rs
